--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.8.1",
     "framer-motion": "^10.0.0",
     "hanzi-writer": "^3.5.0",
     "pinyin-pro": "^3.18.5",
