--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "pinyin-pro": "^3.18.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.0.1",
     "react-router-dom": "^6.22.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
