--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/mermaid": "^9.2.0",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -10,19 +11,28 @@
     "axios": "^1.8.1",
     "framer-motion": "^10.0.0",
     "hanzi-writer": "^3.5.0",
+    "katex": "^0.16.21",
+    "mermaid": "^11.4.1",
     "pinyin-pro": "^3.18.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.0.1",
     "react-router-dom": "^6.22.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
-    "styled-components": "^6.1.8"
+    "remark-math": "^6.0.0",
+    "styled-components": "^6.1.8",
+    "unified": "^11.0.5",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-legacy": "^6.0.2",
+    "@vitejs/plugin-react": "^4.3.4",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "vite": "^6.2.0"
   },
   "scripts": {
     "dev": "vite",
